# TAMS

./: .codespell-exclude  .flake8  .gitignore  .lycheeignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  MOSA-2.ipynb  MOSA.ipynb  README.md  TAMS_plots.ipynb  TAMS_plots2.ipynb  TAMS_v2.0.ipynb  check-examples.py  environment-dev.yml  ideal.py  pyproject.toml  run-mosa-pre.py  run-mosa-step1.py  run-mosa-step1.sh  run-mosa-step2.py  run-mosa-step2.sh  run-mosa-step3.py  run-mosa-step3.sh  run-mosa2.py  run-mosa2.sh  t.ipynb  tams.py  test_tams.py  try-mosa-preproced.py  try-mosa-step2.py  try-overlap.py
.github/: dependabot.yaml
.github/workflows/: ci.yml
TAMS-MATLAB_IMERGv6_2008/: 2006-August-September.txt  2007-August-September.txt  2008-August-September.txt  organizer.m  overlapping_235_with_precip_new_latest.m  plotrain.m  processing_template.m  recursivekidder.m  run_matlabscript_template.sh  run_matlabscript_template.sh.old  runmatlab.sh  savingfiles.m
TAMS-MATLAB_IMERGv6_2008/geom2d/demos/geom2d/triangle/: compTriangle.m
TAMS-MATLAB_IMERGv6_2008/geom2d/demos/polygons2d/tessel/: drawPoissonLines.m  drawVoronoi.m  exempleCracks.eps  exemplePoissonLines.eps
TAMS-MATLAB_IMERGv6_2008/geom2d/geom2d/: clipEdge.m  crackPattern.m  crackPattern2.m  deg2rad.m  isLeftOriented.m  isParallel.m  lineFit.m  rad2deg.m  registerICP.m  signedDistancePointLine.m
TAMS-MATLAB_IMERGv6_2008/geom2d/polygons2d/: clipPolygon.m  clipPolygonHP.m  geod2cart.m  steinerPolygon.m
TAMS_precip_IMERGV6_2008/: 2004-August-September.txt  2005-August-September.txt  classification_new_new.m  create_scripts.sh  familyplots.m  freqplots.m  identify.m  plotrain_bt.m  precipadd.m  precipassign.m  processing.m  test_imerg.m  times.py
TAMS_precip_IMERGV6_2008/altmany-export_fig-2763b78/: lldistkm.m
TAMS_precip_IMERGV6_2008/geom2d/demos/polygons2d/tessel/: demoMedialAxis.m  drawCrackPattern.m  drawCrackPattern2.m  exempleVoronoi.eps
TAMS_precip_IMERGV6_2008/geom2d/geom2d/: isPerpendicular.m
TAMS_precip_IMERGV6_2008/geom2d/polygons2d/: expandPolygon.m  polygonEdges.m  polygonNormalAngle.m  polygonSymmetryAxis.m  randomPointInPolygon.m  resamplePolygonByLength.m  resamplePolylineByLength.m  signatureToPolygon.m
TAMS_precip_IMERGV6_2008/geom2d/polynomialCurves2d/: polyfit2.m
docs/: api.rst  changes.md  conf.py  differences.md  index.md  refs.bib  t.ipynb  t2.ipynb  t3.ipynb
docs/examples/: create-shapes.ipynb  get.ipynb  idealized.ipynb  identify.ipynb  sample-mpas-ug-data.ipynb  sample-satellite-data.ipynb  t2.ipynb  tams-run.ipynb  tracking-options.ipynb
examples/dyamond/: README.md  data.py  lib.py  run-step1.py  run-step1.sh  run-step2.py  run-step2.sh  run-step3.py  run-step3.sh
examples/mesaclip/: mesaclip.py  pre.py
examples/mosa/: MOSA-2.ipynb  MOSA.ipynb  README.md  lib.py  run-mosa-step1.py  run-mosa-step1.sh  run-mosa-step2.py  run-mosa-step2.sh  run-mosa-step3.py  run-mosa-step3.sh  try-mosa-preproc-zip.py  try-mosa-step2.py  try-mosa-tracking-options.py
tams/: __init__.py  core.py  data.py  ideal.py  idealized.py  mosa.py  options.py  shapes.py  util.py
tests/: __init__.py  conftest.py  test_analysis.py  test_classify.py  test_data.py  test_idealized.py  test_identify.py  test_run.py
