[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "tams"
authors = [
    {name = "knubez", email = "knunez.ocasio@tamu.edu"},
    {name = "zmoon", email = "zmoon@tamu.edu"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = "~=3.7"
dependencies = [
    "geopandas >=0.10",
    "matplotlib >=3.4",
    "numpy",
    "pandas",
    "scikit-image",
    "shapely",
    "xarray",
]

[project.urls]
Home = "https://github.com/knubez/TAMS"


[tool.isort]
line_length = 100
profile = "black"
known_first_party = "lib"

[tool.black]
line-length = 100

[tool.mypy]
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
filterwarnings = [
    'ignore:distutils Version classes are deprecated\. Use packaging\.version instead\.:DeprecationWarning',
    'ignore:numpy\.ndarray size changed, may indicate binary incompat:RuntimeWarning',
    'ignore:np\.find\_common\_type is deprecated\.:DeprecationWarning',
    "ignore:The 'shapely\\.geos' module is deprecated:DeprecationWarning:geopandas._compat",
    "ignore:The 'shapely\\.geos' module is deprecated:DeprecationWarning:pyogrio",
    "ignore:Conversion of an array with ndim > 0 to a scalar is deprecated:DeprecationWarning:pyproj\\.transformer",
]

[tool.codespell]
skip = '_build,*.pdf,./docs/examples/tracking-options.ipynb'
exclude-file = '.codespell-exclude'
